<resources>
    <string name="app_name">Travelio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trips">Trips</string>
    <string name="previous">Previous</string>
    <string name="hint_location">e.g. New York</string>
    <string name="tv_location">Location</string>
    <string name="hint_period">e.g. 2023/12/07 – 2023/12/20</string>
    <string name="tv_date">Date</string>
    <string name="tv_accommodation">Accommodation</string>
    <string name="hint_accommodation_name">e.g. Hotel xyz</string>
    <string name="tv_costs">Costs</string>
    <string name="btn_add_trip">Add trip</string>
    <string name="btn_save_trip">Save trip</string>
    <string name="hint_costs">e.g. 1000 €</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tv_image">Trip Image</string>
    <string name="btn_choose_image">Choose image</string>
    <string name="btn_change_image">Choose image</string>
    <string name="tv_sights">Sights</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_add_sights">Add sights</string>
    <string name="tv_profile_name">Name</string>
    <string name="profile_name_hint">e.g. John Doe</string>
    <string name="tv_profile_email">Email</string>
    <string name="profile_email_hint">e.g. test@gmail.com</string>
    <string name="btn_update_profile_text">Update</string>
    <string name="btn_delete_profile_text">Delete Account</string>
    <string name="btn_choose_profile_pic_text">Choose Profile Picture</string>
    <string name="cv_trip_date_text">Date</string>
    <string name="cv_trip_accommodation_text">Accommodation</string>
    <string name="cv_trip_location_image_description">Content Description</string>
    <string name="cv_trip_title_text">Title</string>
    <string name="btn_upcoming">Upcoming</string>
    <string name="btn_current">Current</string>
    <string name="btn_past">Past</string>
    <string name="iv_trip_image_choose_content_description">Shows image of the trip target</string>
    <string name="trip_image_content_description">Shows image of the trip target</string>
    <string name="tv_detail_location_dummy_text">Location_Name</string>
    <string name="tv_detail_date_dummy_text">17/08/2022 – 18/08/2022</string>
    <string name="tv_detail_accommodation_dummy_text">Accommodation Content</string>
    <string name="tv_detail_costs_dummy_text">Costs Content</string>
    <string name="tv_weather">Weather</string>
    <string name="tv_sight_name_dummy_text">Title</string>
    <string name="btn_delete_sight">Delete</string>
    <string name="iv_sight_content_description">Shows picture of the sight</string>
    <string name="iv_sight_detail_content_description">Shows picture of the sight</string>
    <string name="tv_sight_detail_name_dummy_text">Title</string>
    <string name="iv_profile_picture_content_description">Shows user profile picture</string>
    <string name="fab_add_content_description">Button to add a new trip</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="tv_weather_date">Date</string>
    <string name="tv_weather_text">Weather:</string>
    <string name="tv_weather_content_dummy_text">Slight rain showers</string>
    <string name="tv_temp_max_text">Max Temp.:</string>
    <string name="tv_temp_max_content_dummy_text">23.0</string>
    <string name="tv_temp_min_text">Min Temp.:</string>
    <string name="tv_temp_min_content_dummy_text">15.0</string>

</resources>