<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/primary_container"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/berg"
            android:contentDescription="@string/cv_trip_location_image_description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_trip_title_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                />
            <TextView
                android:id="@+id/tv_trip_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cv_trip_date_text"
                android:textSize="16sp"
                android:drawablePadding="2dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24" />
            <TextView
                android:id="@+id/trip_accomodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/cv_trip_accommodation_text"
                android:drawablePadding="2dp"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_baseline_house_24" />

        </LinearLayout>



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>