<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:elevation="5dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">


            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="12dp"
                android:id="@+id/cv_profile_picture_iv"
                app:cardCornerRadius="40dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_height="100dp"
                    android:layout_width="match_parent"
                    android:id="@+id/iv_profile_picture"
                    android:src="@drawable/placeholder"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btn_change_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/btn_choose_profile_pic_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_profile_name"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_profile_name"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_name_hint"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_profile_email"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_profile_email"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_email_hint"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btn_update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/btn_update_profile_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_account"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/btn_delete_profile_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>