<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trips.fragments.TripsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/secondary"
            app:singleSelection="true"
            app:checkedButton="@+id/btn_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_upcoming"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_upcoming"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_current"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_current"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_past"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_past"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trips"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/secondary"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        style="?attr/floatingActionButtonSmallStyle"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/white"
        android:contentDescription="@string/fab_add_content_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>